Bevel modifer - Weight behavior is wrong #37476

Closed
opened 2013-11-15 18:09:38 +01:00 by Adrian Rutkowski · 13 comments

System Information
Vista 32

Blender Version
Broken: Blender 2.69 r61240
Worked: Blender 2.69 r61207

Short description of error

Bevel weight do not work as expected anymore.

Exact steps for others to reproduce the error

Create simple cube with hole inside, like on added screenshot.
Select Sharp edges (from select menu) and add 1.000 weight to them. ( that should give similar result to angle option and it did before)
Add bevel modifier and compare weight vs angle screen.jpg

**System Information** Vista 32 **Blender Version** Broken: Blender 2.69 r61240 Worked: Blender 2.69 r61207 **Short description of error** Bevel weight do not work as expected anymore. **Exact steps for others to reproduce the error** Create simple cube with hole inside, like on added screenshot. Select Sharp edges (from select menu) and add 1.000 weight to them. ( that should give similar result to angle option and it did before) Add bevel modifier and compare weight vs angle ![screen.jpg](https://archive.blender.org/developer/F27713/screen.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @niewinny

Added subscriber: @niewinny

sorry looks like I duplicated the report, can be closed

sorry looks like I duplicated the report, can be closed

Removed subscriber: @niewinny

Removed subscriber: @niewinny

Added subscriber: @niewinny

Added subscriber: @niewinny
Howard Trickey was assigned by Brecht Van Lommel 2013-11-15 22:22:28 +01:00

Added subscribers: @howardt, @brecht

Added subscribers: @howardt, @brecht

I couldn't find the other report? Otherwise I can just leave this open.

For reference, here's the list of bevel bugs . Maybe it's in there somewhere, but I can't tell quickly, so assigning to @howardt.

I couldn't find the other report? Otherwise I can just leave this open. For reference, here's the [list of bevel bugs ](http://developer.blender.org/maniphest/project/2/type/Bug/query/2gXDJ3_eqoZ3/). Maybe it's in there somewhere, but I can't tell quickly, so assigning to @howardt.
Member

Yes, this is different from the previous bug about bev modifier weights, and I confirm the problem. I will debug what is going on.

Yes, this is different from the previous bug about bev modifier weights, and I confirm the problem. I will debug what is going on.

This issue was referenced by blender/blender-addons-contrib@7a899ce9fc

This issue was referenced by blender/blender-addons-contrib@7a899ce9fc7fbcea219c12afe49c08114505b3aa

This issue was referenced by 7a899ce9fc

This issue was referenced by 7a899ce9fc7fbcea219c12afe49c08114505b3aa
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 7a899ce9fc.

Closed by commit 7a899ce9fc.
Member

Thanks for the bug report.
I found that the code was reading the bevel weight from some random edge
instead of the current edge when setting the weight.
Fixed in commit 7a899ce9fc

Thanks for the bug report. I found that the code was reading the bevel weight from some random edge instead of the current edge when setting the weight. Fixed in commit 7a899ce9fc7f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37476
No description provided.