Fix T37476 Bevel modifier got weight from wrong edge

The bevel modifier with 'weight' activated was reading
the weights from the wrong edges.